--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "test": "vitest --run --passWithNoTests"
   },
   "dependencies": {
+    "@google/genai": "^1.40.0",
     "@tailwindcss/vite": "^4.1.18",
     "dexie": "^4.3.0",
     "dexie-react-hooks": "^4.2.0",
